Rmvd fetch routes for followers/ings
